# st.connection

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  streamlit_app.py
.github/workflows/: testing.yml
src/streamlit_connection/: bigquery.py  connection.py  deta_base.py  gsheets.py  mongo.py  postgres.py  s3.py  snowflake.py  sqlite.py
tests/: test_bigquery.py  test_deta.py  test_gsheet.py  test_mongo.py  test_postgres.py  test_s3.py  test_snowflake.py  test_sqlite.py
tests/fixtures/: players.yaml
